log.txt
trying to add string check
in:3
out:Traceback (most recent call last):
  File "main.py", line 128, in <module>
    main()
  File "main.py", line 22, in main
    if loop.isdigit():
AttributeError: 'int' object has no attribute 'isdigit'
*solved*


beginning entering notes

implementing new gamemode and surrounding systems

trying to add null gamemode input integer check
in:
out:   File "main.py", line 146
    elif gamemode > 2: 
    ^
IndentationError: expected an indented block

indentation seems to be correct,  still not working
*solved*
